package unitins.br.ecommerce.relogio.model;

public enum FormaPagamento {
    CARTAO_DEBITO,
    CARTAO_CREDITO,
    BOLETO,
    PIX
}
