package unitins.br.ecommerce.relogio.model;

public enum StatusPagamento {
    PENDENTE,
    CONCLUIDO,
    CANCELADO
}
