package unitins.br.ecommerce.relogio.model;

public enum TipoRelogio {
    DIGITAL,
    ANALOGICO
}
